--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.43",
         "symfony/stopwatch": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*"
     }
