--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "gedmo/doctrine-extensions": "^3.7",
+        "sensio/framework-extra-bundle": "^6.2",
         "stof/doctrine-extensions-bundle": "^v1.7.0",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
@@ -85,6 +86,7 @@
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.43",
         "symfony/stopwatch": "6.0.*",
-        "symfony/web-profiler-bundle": "6.0.*"
+        "symfony/web-profiler-bundle": "6.0.*",
+        "zenstruck/foundry": "^1.21"
     }
 }
